Fix x overflow in object container

--- a/ControllerWebGUI/src/App.css
+++ b/ControllerWebGUI/src/App.css
@@ -73,10 +73,11 @@ body {
 
 .object-container {
     width: 100%;
-    /* display: flex; */
-    /* flex-wrap: wrap; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    align-content: flex-start;
     border-radius: 10px;
     overflow-y: auto;
     margin: 20px;
